Autocoder/AutoCoder/debug_output/debug_output_1_1.txt
  File "F:\AutoCoder\AutoCoder\output_scripts\output_1.py", line 39
    ```
    ^
SyntaxError: invalid syntax
